Source/JavaScriptCore/runtime/JSGeneratorFunction.h
@@ -32,7 +32,6 @@ namespace JSC {
 
 class JSGlobalObject;
 class LLIntOffsetsExtractor;
-class LLIntDesiredOffsets;
 
 class JSGeneratorFunction final : public JSFunction {
     friend class JIT;
